// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper clearButton"
>
  <button
    className="container uui-button-box uui-enabled -clickable root size-36 linkButton-color-blue uui-no-left-icon uui-no-right-icon"
    href={null}
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="uui-caption"
    >
      CLOSE ALL NOTIFICATIONS
    </div>
  </button>
</div>
`;

exports[`ErrorNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`HintNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-blue root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`NotificationCard should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`NotificationCard should be rendered correctly 2`] = `
<div
  className="notificationWrapper color-red root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`SuccessNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-green root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`WarningNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-amber root"
  role="alert"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root icon-color-gray60 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;
